--- a/jslint4java-docs/src/main/resources/index.html
+++ b/jslint4java-docs/src/main/resources/index.html
@@ -23,5 +23,12 @@
       environments than just a web browser.  jslint4java provides both a
       <a href="cli.html">command-line tool</a> and an
       <a href="ant.html">ant task</a>.</p>
+
+    <p>
+      jslint4java is developed using <a href="http://git-scm.com/">git</a>.
+      If you would like to get involved, please visit
+      <a href="http://github.com/happygiraffe/jslint4java/">github.com/happygiraffe/jslint4java</a>
+      or run <code>git clone git://github.com/happygiraffe/jslint4java.git</code>.
+    </p>
   </body>
 </html>
