--- a/jslint4java-docs/src/main/resources/index.html
+++ b/jslint4java-docs/src/main/resources/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>jslint4java</title>
+    <title>jslint4java ${project.version}</title>
     <link href="jslint4java.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <h1>jslint4java</h1>
+    <h1>jslint4java ${project.version}</h1>
 
     <p>
       <small>
