--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -131,7 +131,7 @@
 
     <pre class="prettyprint" id="example-taskdef">  &lt;taskdef name="jslint"
            classname="com.googlecode.jslint4java.ant.JSLintTask"
-           classpath="/path/to/jslint4java-1.3.jar" /&gt;</pre>
+           classpath="/path/to/jslint4java-${project.version}.jar" /&gt;</pre>
 
     <p>
       You may also use the antlibs facility to pull in JSLint.
