Add quick link to examples.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -14,6 +14,7 @@
       that it can be invoked automatically as part of your build procedure.  For
       more detail on precisely what is checked, please see
       <a href="http://jslint.com/lint.html">the original documentation</a>.
+      To get started quickly, see the <a href="#examples">examples</a>.
     </p>
 
     <p>jslint4java requires Java 5 and ant 1.7.</p>
