Add missing maxerr docs.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -61,6 +61,7 @@
       <dt>immed    </dt><dd>If immediate invocations must be wrapped in parens</dd>
       <dt>indent   </dt><dd>The number of spaces used for indentation (default is 4)</dd>
       <dt>laxbreak </dt><dd>If line breaks should not be checked</dd>
+      <dt>maxerr   </dt><dd>The maximum number of warnings reported (default is 50)/dd>
       <dt>newcap   </dt><dd>If constructor names must be capitalized</dd>
       <dt>nomen    </dt><dd>If names should be checked</dd>
       <dt>on       </dt><dd>If html event handlers should be allowed</dd>
