issue 18: Document the @jslint attribute.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -37,6 +37,11 @@
         <td> No </td>
       </tr>
       <tr>
+        <td> jslint </td>
+        <td> The path to an alternative <code>jslint.js</code>.  If you want to use a newer version than the bundled one. </td>
+        <td> No </td>
+      </tr>
+      <tr>
         <td> options </td>
         <td> A comma separated list of options to pass to JSLint. </td>
         <td> No </td>
