Update to JSLint 2009-11-24.
This adds the "devel" option.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -59,6 +59,7 @@
       <dt>cap      </dt><dd>If upper case html should be allowed</dd>
       <dt>css      </dt><dd>If css workarounds should be tolerated</dd>
       <dt>debug    </dt><dd>If debugger statements should be allowed</dd>
+      <dt>devel    </dt><dd>If logging should be allowed (console, alert, etc.)</dd>
       <dt>eqeqeq   </dt><dd>If === should be required</dd>
       <dt>evil     </dt><dd>If eval should be allowed</dd>
       <dt>forin    </dt><dd>If for in statements must filter</dd>
