--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -20,6 +20,7 @@ usage: jslint [options] file.js ...
   --cap      If upper case html should be allowed
   --css      If css workarounds should be tolerated
   --debug    If debugger statements should be allowed
+  --devel    If logging should be allowed (console, alert, etc.)
   --eqeqeq   If === should be required
   --evil     If eval should be allowed
   --forin    If for in statements must filter
