issue 8: document --predef option.

--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -35,6 +35,7 @@ usage: jslint [options] file.js ...
   --onevar   If only one var statement per function should be allowed
   --passfail If the scan should stop on first error
   --plusplus If increment/decrement should not be allowed
+  --predef=  The names of predefined global variables.
   --regexp   If the . should not be allowed in regexp literals
   --rhino    If the rhino environment globals should be predefined
   --safe     If use of some browser features should be restricted
@@ -48,7 +49,7 @@ usage: jslint [options] file.js ...
   --help     Show this help
   --jslint=  Specify an alternative version of jslint.js
 
-using jslint version 2009-10-04
+using jslint version 2009-11-22
 </span></pre>
 
     <p>The list of options is derived from the
@@ -90,6 +91,20 @@ if (x) {
 $ java -jar jslint4java-${project.version}.jar --white happy.js
 jslint:happy.js:2:2:Expected 'x' to have an indentation of 4 instead of 2.
 $ java -jar jslint4java-${project.version}.jar --white --indent=2 happy.js
+$
+</span></pre>
+
+    <p>
+      To pass a list of predefined global variables, give a comma separated
+      list of names to <code>--predef</code>, e.g.
+    </p>
+
+    <pre class="prettyprint"><span class="nocode">$ cat globals.js
+foo(bar(42));
+$ java -jar jslint4java-${project.version}.jar --undef globals.js
+jslint:globals.js:1:1:'foo' is not defined.
+jslint:globals.js:1:5:'bar' is not defined.
+$ java -jar jslint4java-${project.version}.jar --undef --predef=foo,bar globals.js
 $
 </span></pre>
 
