Update to JSLint 2010-06-27.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -62,6 +62,7 @@
       <dt>devel    </dt><dd>If logging should be allowed (console, alert, etc.)</dd>
       <dt>eqeqeq   </dt><dd>If === should be required</dd>
       <dt>evil     </dt><dd>If eval should be allowed</dd>
+      <dt>es5      </dt><dd>If es5 syntax should be allowed</dd>
       <dt>forin    </dt><dd>If for in statements must filter</dd>
       <dt>fragment </dt><dd>If html fragments should be allowed</dd>
       <dt>immed    </dt><dd>If immediate invocations must be wrapped in parens</dd>
@@ -78,12 +79,12 @@
       <dt>regexp   </dt><dd>If the . should not be allowed in regexp literals</dd>
       <dt>rhino    </dt><dd>If the rhino environment globals should be predefined</dd>
       <dt>safe     </dt><dd>If use of some browser features should be restricted</dd>
-      <dt>sidebar  </dt><dd>If the system object should be predefined</dd>
       <dt>strict   </dt><dd>Require the "use strict"; pragma</dd>
       <dt>sub      </dt><dd>If all forms of subscript notation are tolerated</dd>
       <dt>undef    </dt><dd>If variables should be declared before used</dd>
       <dt>white    </dt><dd>If strict whitespace rules apply</dd>
       <dt>widget   </dt><dd>If the yahoo widgets globals should be predefined</dd>
+      <dt>windows  </dt><dd>If ms windows-specigic globals should be predefined</dd>
     </dl>
 
     <p>
