--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -22,6 +22,7 @@ usage: jslint [options] file.js ...
   --debug    If debugger statements should be allowed
   --devel    If logging should be allowed (console, alert, etc.)
   --eqeqeq   If === should be required
+  --es5      If es5 syntax should be allowed
   --evil     If eval should be allowed
   --forin    If for in statements must filter
   --fragment If html fragments should be allowed
@@ -39,17 +40,17 @@ usage: jslint [options] file.js ...
   --regexp   If the . should not be allowed in regexp literals
   --rhino    If the rhino environment globals should be predefined
   --safe     If use of some browser features should be restricted
-  --sidebar  If the system object should be predefined
   --strict   Require the "use strict"; pragma
   --sub      If all forms of subscript notation are tolerated
   --undef    If variables should be declared before used
   --white    If strict whitespace rules apply
   --widget   If the yahoo widgets globals should be predefined
+  --windows  If ms windows-specigic globals should be predefined
 
   --help     Show this help
   --jslint=  Specify an alternative version of jslint.js
 
-using jslint version 2009-11-22
+using jslint version 2010-06-27
 </span></pre>
 
     <p>The list of options is derived from the
