issue 39: add failureproperty attribute.
The property just contains the same message as the build failure would have.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -32,6 +32,11 @@
         <td> No </td>
       </tr>
       <tr>
+        <td> failureProperty </td>
+        <td> The name of a property to set in case of build failure.   You should also set <code>haltOnFailure="false"</code>. </td>
+        <td> No </td>
+      </tr>
+      <tr>
         <td> haltOnFailure </td>
         <td> Should the build stop if JSLint reports an error?  Defaults to true. </td>
         <td> No </td>
