--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -123,7 +123,7 @@
       </tr>
       <tr>
         <td> type </td>
-        <td> One of <code>plain</code>, <code>xml</code> or <code>junit</code>.  The <code>xml</code> format is a custom invention of this project; it's probably more useful to use the junit format as it has interoperability with existing tools.</td>
+        <td> One of <code>plain</code>, <code>xml</code> or <code>junit</code>.  The <code>xml</code> format is a custom invention of this project; it's probably more useful to use the <code>junit</code> format as it has interoperability with existing tools.</td>
         <td> Yes </td>
       </tr>
       <tr>
