--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -47,10 +47,11 @@ usage: jslint [options] file.js ...
   --widget   If the yahoo widgets globals should be predefined
   --windows  If ms windows-specigic globals should be predefined
 
+  --encoding= Specify the input encoding
   --help     Show this help
   --jslint=  Specify an alternative version of jslint.js
 
-using jslint version 2010-06-27
+using jslint version 2010-07-14
 </span></pre>
 
     <p>The list of options is derived from the
@@ -113,6 +114,17 @@ $
       supplied doesn't suit you (for example there is a newer version available).
       To use another jslint, specify <code>--jslint=/some/where/jslint.js</code>
       on the command line.</p>
+
+    <p>
+      If your file is in an alternative encoding, that can be specified
+      with the <code>--encoding</code> flag.  This value is passed directly
+      to <a href="http://download.oracle.com/docs/cd/E17409_01/javase/6/docs/api/java/nio/charset/Charset.html#forName(java.lang.String)">Charset.forName()</a>,
+      so any encoding supported by your Java VM is allowed.  If no encoding
+      is specified, the platform default is used.
+      <span style="color:#eee">
+        &lt;subliminal&gt;Use UTF-8!  Use UTF-8!&lt;/subliminal&gt;
+      </span>
+    </p>
 
     <script type="text/javascript">prettyPrint()</script>
   </body>
