Sync cli report names with ant task.

--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -147,7 +147,15 @@ $
         </td>
       </tr>
       <tr>
-        <td>html</td>
+        <td>junit</td>
+        <td>
+          Produce an XML file similar to that of the
+          <a href="http://ant.apache.org/manual/Tasks/junit.html">ant junit task</a>.
+          This is a good choice for integrating with third-party systems.
+        </td>
+      </tr>
+      <tr>
+        <td>report</td>
         <td>
           JSLint will produce an HTML
           <a href="http://www.jslint.com/lint.html#report">report</a> on your
@@ -155,18 +163,10 @@ $
         </td>
       </tr>
       <tr>
-        <td>jslint</td>
+        <td>xml</td>
         <td>
           A custom XML format, with one element per error.  You should prefer
           the JUnit output format if possible.
-        </td>
-      </tr>
-      <tr>
-        <td>junit</td>
-        <td>
-          Produce an XML file similar to that of the
-          <a href="http://ant.apache.org/manual/Tasks/junit.html">ant junit task</a>.
-          This is a good choice for integrating with third-party systems.
         </td>
       </tr>
     </table>
