issue 45: Document maxlen.

--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -34,6 +34,7 @@ Usage: jslint4java [options]
     --jslint    Specify an alternative version of jslint.js
     --laxbreak  If line breaks should not be checked
     --maxerr    The maximum number of warnings reported (default is 50)
+    --maxlen    Maximum line length
     --newcap    If constructor names must be capitalized
     --nomen     If names should be checked
     --on        If html event handlers should be allowed
@@ -42,7 +43,7 @@ Usage: jslint4java [options]
     --plusplus  If increment/decrement should not be allowed
     --predef    The names of predefined global variables.
     --regexp    If the . should not be allowed in regexp literals
-    --report    Display report in different formats: plain, jslint, junit and html (default: )
+    --report    Display report in different formats: plain, xml, junit and report (default: )
     --rhino     If the rhino environment globals should be predefined
     --safe      If use of some browser features should be restricted
     --strict    Require the "use strict"; pragma
@@ -52,7 +53,7 @@ Usage: jslint4java [options]
     --widget    If the yahoo widgets globals should be predefined
     --windows   If ms windows-specigic globals should be predefined
 
-using jslint version 2010-09-08
+using jslint version 2010-10-26
 </span></pre>
 
     <p>The list of options is (mostly) derived from the
