Update to JSLint 2011-02-09.
This is a fairly large rewrite of JSLint, and removes three options (as well as adding one).

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -62,17 +62,15 @@
       <dt>bitwise  </dt><dd>If bitwise operators should not be allowed</dd>
       <dt>browser  </dt><dd>If the standard browser globals should be predefined</dd>
       <dt>cap      </dt><dd>If upper case html should be allowed</dd>
+      <dt>continue </dt><dd>If the continuation statement should be tolerated</dd>
       <dt>css      </dt><dd>If css workarounds should be tolerated</dd>
       <dt>debug    </dt><dd>If debugger statements should be allowed</dd>
       <dt>devel    </dt><dd>If logging should be allowed (console, alert, etc.)</dd>
-      <dt>eqeqeq   </dt><dd>If === should be required</dd>
       <dt>evil     </dt><dd>If eval should be allowed</dd>
       <dt>es5      </dt><dd>If es5 syntax should be allowed</dd>
       <dt>forin    </dt><dd>If for in statements must filter</dd>
       <dt>fragment </dt><dd>If html fragments should be allowed</dd>
-      <dt>immed    </dt><dd>If immediate invocations must be wrapped in parens</dd>
       <dt>indent   </dt><dd>The number of spaces used for indentation (default is 4)</dd>
-      <dt>laxbreak </dt><dd>If line breaks should not be checked</dd>
       <dt>maxerr   </dt><dd>The maximum number of warnings reported (default is 50)</dd>
       <dt>maxlen   </dt><dd>Maximum line length</dd>
       <dt>newcap   </dt><dd>If constructor names must be capitalized</dd>
