--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -19,20 +19,18 @@ Usage: jslint4java [options]
     --bitwise   If bitwise operators should not be allowed
     --browser   If the standard browser globals should be predefined
     --cap       If upper case html should be allowed
+    --continue  If the continuation statement should be tolerated
     --css       If css workarounds should be tolerated
     --debug     If debugger statements should be allowed
     --devel     If logging should be allowed (console, alert, etc.)
     --encoding  Specify the input encoding
-    --eqeqeq    If === should be required
     --es5       If es5 syntax should be allowed
     --evil      If eval should be allowed
     --forin     If for in statements must filter
     --fragment  If html fragments should be allowed
     --help      Display usage information (default: false)
-    --immed     If immediate invocations must be wrapped in parens
     --indent    The number of spaces used for indentation (default is 4)
     --jslint    Specify an alternative version of jslint.js
-    --laxbreak  If line breaks should not be checked
     --maxerr    The maximum number of warnings reported (default is 50)
     --maxlen    Maximum line length
     --newcap    If constructor names must be capitalized
