--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -15,43 +15,46 @@
     <pre class="prettyprint"><span class="nocode">$ java -jar jslint4java-${project.version}.jar
 Usage: jslint4java [options]
  file.js ...
-  Options:    --adsafe    If adsafe should be enforced
-    --bitwise   If bitwise operators should not be allowed
-    --browser   If the standard browser globals should be predefined
-    --cap       If upper case html should be allowed
-    --continue  If the continuation statement should be tolerated
-    --css       If css workarounds should be tolerated
-    --debug     If debugger statements should be allowed
-    --devel     If logging should be allowed (console, alert, etc.)
-    --encoding  Specify the input encoding
-    --es5       If es5 syntax should be allowed
-    --evil      If eval should be allowed
-    --forin     If for in statements must filter
-    --fragment  If html fragments should be allowed
-    --help      Display usage information (default: false)
-    --indent    The number of spaces used for indentation (default is 4)
-    --jslint    Specify an alternative version of jslint.js
-    --maxerr    The maximum number of warnings reported (default is 50)
-    --maxlen    Maximum line length
-    --newcap    If constructor names must be capitalized
-    --nomen     If names should be checked
-    --on        If html event handlers should be allowed
-    --onevar    If only one var statement per function should be allowed
-    --passfail  If the scan should stop on first error
-    --plusplus  If increment/decrement should not be allowed
-    --predef    The names of predefined global variables.
-    --regexp    If the . should not be allowed in regexp literals
-    --report    Display report in different formats: plain, xml, junit and report (default: )
-    --rhino     If the rhino environment globals should be predefined
-    --safe      If use of some browser features should be restricted
-    --strict    Require the "use strict"; pragma
-    --sub       If all forms of subscript notation are tolerated
-    --undef     If variables should be declared before used
-    --white     If strict whitespace rules apply
-    --widget    If the yahoo widgets globals should be predefined
-    --windows   If ms windows-specigic globals should be predefined
+  Options:
+        --adsafe     If adsafe should be enforced
+        --bitwise    If bitwise operators should not be allowed
+        --browser    If the standard browser globals should be predefined
+        --cap        If upper case html should be allowed
+        --continue   If the continuation statement should be tolerated
+        --css        If css workarounds should be tolerated
+        --debug      If debugger statements should be allowed
+        --devel      If logging should be allowed (console, alert, etc.)
+        --encoding   Specify the input encoding
+        --es5        If es5 syntax should be allowed
+        --evil       If eval should be allowed
+        --forin      If for in statements must filter
+        --fragment   If html fragments should be allowed
+        --help       Display usage information
+                     Default: false
+        --indent     The number of spaces used for indentation (default is 4)
+        --jslint     Specify an alternative version of jslint.js
+        --maxerr     The maximum number of warnings reported (default is 50)
+        --maxlen     Maximum line length
+        --newcap     If constructor names must be capitalized
+        --nomen      If names should be checked
+        --on         If html event handlers should be allowed
+        --onevar     If only one var statement per function should be allowed
+        --passfail   If the scan should stop on first error
+        --plusplus   If increment/decrement should not be allowed
+        --predef     The names of predefined global variables.
+        --regexp     If the . should not be allowed in regexp literals
+        --report     Display report in different formats: plain, xml, junit and
+                     report
+        --rhino      If the rhino environment globals should be predefined
+        --safe       If use of some browser features should be restricted
+        --strict     Require the "use strict"; pragma
+        --sub        If all forms of subscript notation are tolerated
+        --undef      If variables should be declared before used
+        --white      If strict whitespace rules apply
+        --widget     If the yahoo widgets globals should be predefined
+        --windows    If ms windows-specigic globals should be predefined
 
-using jslint version 2010-10-26
+using jslint version 2011-02-20
 </span></pre>
 
     <p>The list of options is (mostly) derived from the
