--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -16,7 +16,7 @@
 Usage: jslint4java [options]
  file.js ...
   Options:
-        --adsafe     If adsafe should be enforced
+        --adsafe     If adsafe rules should be enforced
         --bitwise    If bitwise operators should not be allowed
         --browser    If the standard browser globals should be predefined
         --cap        If upper case html should be allowed
@@ -27,24 +27,24 @@ Usage: jslint4java [options]
         --encoding   Specify the input encoding
         --es5        If es5 syntax should be allowed
         --evil       If eval should be allowed
-        --forin      If for in statements must filter
+        --forin      If for in statements need not filter
         --fragment   If html fragments should be allowed
         --help       Display usage information
                      Default: false
-        --indent     The number of spaces used for indentation (default is 4)
+        --indent     The indentation factor
         --jslint     Specify an alternative version of jslint.js
-        --maxerr     The maximum number of warnings reported (default is 50)
-        --maxlen     Maximum line length
+        --maxerr     The maximum number of errors to allow
+        --maxlen     The maximum length of a source line
         --newcap     If constructor names must be capitalized
         --nomen      If names should be checked
         --on         If html event handlers should be allowed
         --onevar     If only one var statement per function should be allowed
         --passfail   If the scan should stop on first error
         --plusplus   If increment/decrement should not be allowed
-        --predef     The names of predefined global variables.
+        --predef     The names of predefined global variables
         --regexp     If the . should not be allowed in regexp literals
-        --report     Display report in different formats: plain, xml, junit and
-                     report
+        --report     Display report in different formats: plain, xml, junit,
+                     checkstyle and report
         --rhino      If the rhino environment globals should be predefined
         --safe       If use of some browser features should be restricted
         --strict     Require the "use strict"; pragma
@@ -54,7 +54,7 @@ Usage: jslint4java [options]
         --widget     If the yahoo widgets globals should be predefined
         --windows    If ms windows-specigic globals should be predefined
 
-using jslint version 2011-02-20
+using jslint version 2011-03-07
 </span></pre>
 
     <p>The list of options is (mostly) derived from the
