--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -58,37 +58,37 @@
       and comprises of:
     </p>
     <dl>
-      <dt>adsafe   </dt><dd>If adsafe should be enforced</dd>
-      <dt>bitwise  </dt><dd>If bitwise operators should not be allowed</dd>
-      <dt>browser  </dt><dd>If the standard browser globals should be predefined</dd>
-      <dt>cap      </dt><dd>If upper case html should be allowed</dd>
-      <dt>continue </dt><dd>If the continuation statement should be tolerated</dd>
-      <dt>css      </dt><dd>If css workarounds should be tolerated</dd>
-      <dt>debug    </dt><dd>If debugger statements should be allowed</dd>
-      <dt>devel    </dt><dd>If logging should be allowed (console, alert, etc.)</dd>
-      <dt>evil     </dt><dd>If eval should be allowed</dd>
-      <dt>es5      </dt><dd>If es5 syntax should be allowed</dd>
-      <dt>forin    </dt><dd>If for in statements must filter</dd>
-      <dt>fragment </dt><dd>If html fragments should be allowed</dd>
-      <dt>indent   </dt><dd>The number of spaces used for indentation (default is 4)</dd>
-      <dt>maxerr   </dt><dd>The maximum number of warnings reported (default is 50)</dd>
-      <dt>maxlen   </dt><dd>Maximum line length</dd>
-      <dt>newcap   </dt><dd>If constructor names must be capitalized</dd>
-      <dt>nomen    </dt><dd>If names should be checked</dd>
-      <dt>on       </dt><dd>If html event handlers should be allowed</dd>
-      <dt>onevar   </dt><dd>If only one var statement per function should be allowed</dd>
-      <dt>passfail </dt><dd>If the scan should stop on first error</dd>
-      <dt>plusplus </dt><dd>If increment/decrement should not be allowed</dd>
-      <!-- NB: predef omitted, as it has its own child element. -->
-      <dt>regexp   </dt><dd>If the . should not be allowed in regexp literals</dd>
-      <dt>rhino    </dt><dd>If the rhino environment globals should be predefined</dd>
-      <dt>safe     </dt><dd>If use of some browser features should be restricted</dd>
-      <dt>strict   </dt><dd>Require the "use strict"; pragma</dd>
-      <dt>sub      </dt><dd>If all forms of subscript notation are tolerated</dd>
-      <dt>undef    </dt><dd>If variables should be declared before used</dd>
-      <dt>white    </dt><dd>If strict whitespace rules apply</dd>
-      <dt>widget   </dt><dd>If the yahoo widgets globals should be predefined</dd>
-      <dt>windows  </dt><dd>If ms windows-specigic globals should be predefined</dd>
+      <dt>adsafe     <dd>If adsafe rules should be enforced
+      <dt>bitwise    <dd>If bitwise operators should not be allowed
+      <dt>browser    <dd>If the standard browser globals should be predefined
+      <dt>cap        <dd>If upper case html should be allowed
+      <dt>continue   <dd>If the continuation statement should be tolerated
+      <dt>css        <dd>If css workarounds should be tolerated
+      <dt>debug      <dd>If debugger statements should be allowed
+      <dt>devel      <dd>If logging should be allowed (console, alert, etc.)
+      <dt>es5        <dd>If es5 syntax should be allowed
+      <dt>evil       <dd>If eval should be allowed
+      <dt>forin      <dd>If for in statements need not filter
+      <dt>fragment   <dd>If html fragments should be allowed
+      <dt>indent     <dd>The indentation factor
+      <dt>maxerr     <dd>The maximum number of errors to allow
+      <dt>maxlen     <dd>The maximum length of a source line
+      <dt>newcap     <dd>If constructor names must be capitalized
+      <dt>nomen      <dd>If names should be checked
+      <dt>on         <dd>If html event handlers should be allowed
+      <dt>onevar     <dd>If only one var statement per function should be allowed
+      <dt>passfail   <dd>If the scan should stop on first error
+      <dt>plusplus   <dd>If increment/decrement should not be allowed
+      <!-- NB: predef omitted as it has its own child element. -->
+      <dt>regexp     <dd>If the . should not be allowed in regexp literals
+      <dt>rhino      <dd>If the rhino environment globals should be predefined
+      <dt>safe       <dd>If use of some browser features should be restricted
+      <dt>strict     <dd>Require the "use strict"; pragma
+      <dt>sub        <dd>If all forms of subscript notation are tolerated
+      <dt>undef      <dd>If variables should be declared before used
+      <dt>white      <dd>If strict whitespace rules apply
+      <dt>widget     <dd>If the yahoo widgets globals should be predefined
+      <dt>windows    <dd>If ms windows-specigic globals should be predefined
     </dl>
 
     <p>
