Update docs to latest version.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -74,6 +74,7 @@
       <dt>maxerr     <dd>The maximum number of errors to allow
       <dt>maxlen     <dd>The maximum length of a source line
       <dt>newcap     <dd>If constructor names must be capitalized
+      <dt>node       <dd>If node.js globals should be predefined
       <dt>nomen      <dd>If names should be checked
       <dt>on         <dd>If html event handlers should be allowed
       <dt>onevar     <dd>If only one var statement per function should be allowed
@@ -83,12 +84,13 @@
       <dt>regexp     <dd>If the . should not be allowed in regexp literals
       <dt>rhino      <dd>If the rhino environment globals should be predefined
       <dt>safe       <dd>If use of some browser features should be restricted
-      <dt>strict     <dd>Require the "use strict"; pragma
+      <dt>strict     <dd>Require the 'use strict'; pragma
       <dt>sub        <dd>If all forms of subscript notation are tolerated
       <dt>undef      <dd>If variables should be declared before used
+      <dt>unparam    <dd>If unused parameters should be tolerated
       <dt>white      <dd>If strict whitespace rules apply
       <dt>widget     <dd>If the yahoo widgets globals should be predefined
-      <dt>windows    <dd>If ms windows-specigic globals should be predefined
+      <dt>windows    <dd>If ms windows-specific globals should be predefined
     </dl>
 
     <p>
