--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -36,6 +36,7 @@ Usage: jslint4java [options]
         --maxerr     The maximum number of errors to allow
         --maxlen     The maximum length of a source line
         --newcap     If constructor names must be capitalized
+        --node       If node.js globals should be predefined
         --nomen      If names should be checked
         --on         If html event handlers should be allowed
         --onevar     If only one var statement per function should be allowed
@@ -47,14 +48,15 @@ Usage: jslint4java [options]
                      checkstyle and report
         --rhino      If the rhino environment globals should be predefined
         --safe       If use of some browser features should be restricted
-        --strict     Require the "use strict"; pragma
+        --strict     Require the 'use strict'; pragma
         --sub        If all forms of subscript notation are tolerated
         --undef      If variables should be declared before used
+        --unparam    If unused parameters should be tolerated
         --white      If strict whitespace rules apply
         --widget     If the yahoo widgets globals should be predefined
-        --windows    If ms windows-specigic globals should be predefined
+        --windows    If ms windows-specific globals should be predefined
 
-using jslint version 2011-03-07
+using jslint version 2011-05-10
 </span></pre>
 
     <p>The list of options is (mostly) derived from the
