Document maven plugin.

--- a/jslint4java-docs/src/main/resources/index.html
+++ b/jslint4java-docs/src/main/resources/index.html
@@ -29,9 +29,10 @@
     <p>
       <a href="http://code.google.com/p/jslint4java/">jslint4java</a> is a
       java wrapper around the JSLint tool.  This enables it to be run in more
-      environments than just a web browser.  jslint4java provides both a
-      <a href="cli.html">command-line tool</a> and an
-      <a href="ant.html">ant task</a>.  If you would like to develop your
+      environments than just a web browser.  jslint4java provides a
+      <a href="cli.html">command-line tool</a>, an
+      <a href="ant.html">ant task</a> and a <a href="maven.html">maven task</a>.
+      If you would like to develop your
       own integrations, please consult the
       <!-- I hate "index.html", but it does make offline dev easier. -->
       <a href="apidocs/index.html">apidocs</a>.
