Support multiple source folders.
Renamed from source directories as I'm not certain of how maven will pluralise that…

--- a/jslint4java-docs/src/main/resources/maven.html
+++ b/jslint4java-docs/src/main/resources/maven.html
@@ -149,8 +149,8 @@ $ mvn jslint4java:lint
       </tr>
 
       <tr>
-        <td><code>&lt;sourceDirectory&gt;</code></td>
-        <td>Where to find the JavaScript files to lint.</td>
+        <td><code>&lt;sourceFolders&gt;</code></td>
+        <td>One or more folders to find the JavaScript files to lint.</td>
         <td><code>${basedir}/src/main/webapp</code></td>
       </tr>
 
