--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -17,7 +17,7 @@ Usage: jslint4java [options]
  file.js ...
   Options:
         --adsafe     If adsafe rules should be enforced
-        --bitwise    If bitwise operators should not be allowed
+        --bitwise    If bitwise operators should be allowed
         --browser    If the standard browser globals should be predefined
         --cap        If upper case html should be allowed
         --continue   If the continuation statement should be tolerated
@@ -25,6 +25,7 @@ Usage: jslint4java [options]
         --debug      If debugger statements should be allowed
         --devel      If logging should be allowed (console, alert, etc.)
         --encoding   Specify the input encoding
+        --eqeq       If == should be allowed
         --es5        If es5 syntax should be allowed
         --evil       If eval should be allowed
         --forin      If for in statements need not filter
@@ -35,28 +36,29 @@ Usage: jslint4java [options]
         --jslint     Specify an alternative version of jslint.js
         --maxerr     The maximum number of errors to allow
         --maxlen     The maximum length of a source line
-        --newcap     If constructor names must be capitalized
+        --newcap     If constructor names capitalization is ignored
         --node       If node.js globals should be predefined
-        --nomen      If names should be checked
+        --nomen      If names may have dangling _
         --on         If html event handlers should be allowed
-        --onevar     If only one var statement per function should be allowed
         --passfail   If the scan should stop on first error
-        --plusplus   If increment/decrement should not be allowed
+        --plusplus   If increment/decrement should be allowed
         --predef     The names of predefined global variables
-        --regexp     If the . should not be allowed in regexp literals
+        --regexp     If the . should be allowed in regexp literals
         --report     Display report in different formats: plain, xml, junit,
                      checkstyle and report
         --rhino      If the rhino environment globals should be predefined
         --safe       If use of some browser features should be restricted
-        --strict     Require the 'use strict'; pragma
+        --sloppy     If the 'use strict'; pragma is optional
         --sub        If all forms of subscript notation are tolerated
-        --undef      If variables should be declared before used
+        --type       If types can be used inconsistently
+        --undef      If variables can be declared out of order
         --unparam    If unused parameters should be tolerated
-        --white      If strict whitespace rules apply
+        --vars       If multiple var statements per function should be allowed
+        --white      If sloppy whitespace is tolerated
         --widget     If the yahoo widgets globals should be predefined
         --windows    If ms windows-specific globals should be predefined
 
-using jslint version 2011-05-10
+using jslint version 2011-06-11
 </span></pre>
 
     <p>The list of options is (mostly) derived from the
