Update the ant docs automatically.
Hurrah, one less thing to do.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -58,39 +58,44 @@
       and comprises of:
     </p>
     <dl>
-      <dt>adsafe     <dd>If adsafe rules should be enforced
-      <dt>bitwise    <dd>If bitwise operators should not be allowed
-      <dt>browser    <dd>If the standard browser globals should be predefined
-      <dt>cap        <dd>If upper case html should be allowed
-      <dt>continue   <dd>If the continuation statement should be tolerated
-      <dt>css        <dd>If css workarounds should be tolerated
-      <dt>debug      <dd>If debugger statements should be allowed
-      <dt>devel      <dd>If logging should be allowed (console, alert, etc.)
-      <dt>es5        <dd>If es5 syntax should be allowed
-      <dt>evil       <dd>If eval should be allowed
-      <dt>forin      <dd>If for in statements need not filter
-      <dt>fragment   <dd>If html fragments should be allowed
-      <dt>indent     <dd>The indentation factor
-      <dt>maxerr     <dd>The maximum number of errors to allow
-      <dt>maxlen     <dd>The maximum length of a source line
-      <dt>newcap     <dd>If constructor names must be capitalized
-      <dt>node       <dd>If node.js globals should be predefined
-      <dt>nomen      <dd>If names should be checked
-      <dt>on         <dd>If html event handlers should be allowed
-      <dt>onevar     <dd>If only one var statement per function should be allowed
-      <dt>passfail   <dd>If the scan should stop on first error
-      <dt>plusplus   <dd>If increment/decrement should not be allowed
-      <!-- NB: predef omitted as it has its own child element. -->
-      <dt>regexp     <dd>If the . should not be allowed in regexp literals
-      <dt>rhino      <dd>If the rhino environment globals should be predefined
-      <dt>safe       <dd>If use of some browser features should be restricted
-      <dt>strict     <dd>Require the 'use strict'; pragma
-      <dt>sub        <dd>If all forms of subscript notation are tolerated
-      <dt>undef      <dd>If variables should be declared before used
-      <dt>unparam    <dd>If unused parameters should be tolerated
-      <dt>white      <dd>If strict whitespace rules apply
-      <dt>widget     <dd>If the yahoo widgets globals should be predefined
-      <dt>windows    <dd>If ms windows-specific globals should be predefined
+<!-- // BEGIN-OPTIONS -->
+    <dt>adsafe <dd>If adsafe rules should be enforced
+    <dt>bitwise <dd>If bitwise operators should be allowed
+    <dt>browser <dd>If the standard browser globals should be predefined
+    <dt>cap <dd>If upper case html should be allowed
+    <dt>continue <dd>If the continuation statement should be tolerated
+    <dt>css <dd>If css workarounds should be tolerated
+    <dt>debug <dd>If debugger statements should be allowed
+    <dt>devel <dd>If logging should be allowed (console, alert, etc.)
+    <dt>eqeq <dd>If == should be allowed
+    <dt>es5 <dd>If es5 syntax should be allowed
+    <dt>evil <dd>If eval should be allowed
+    <dt>forin <dd>If for in statements need not filter
+    <dt>fragment <dd>If html fragments should be allowed
+    <dt>indent <dd>The indentation factor
+    <dt>maxerr <dd>The maximum number of errors to allow
+    <dt>maxlen <dd>The maximum length of a source line
+    <dt>newcap <dd>If constructor names capitalization is ignored
+    <dt>node <dd>If node.js globals should be predefined
+    <dt>nomen <dd>If names may have dangling _
+    <dt>on <dd>If html event handlers should be allowed
+    <dt>passfail <dd>If the scan should stop on first error
+    <dt>plusplus <dd>If increment/decrement should be allowed
+    <dt>predef <dd>The names of predefined global variables
+    <dt>regexp <dd>If the . should be allowed in regexp literals
+    <dt>rhino <dd>If the rhino environment globals should be predefined
+    <dt>safe <dd>If use of some browser features should be restricted
+    <dt>sloppy <dd>If the 'use strict'; pragma is optional
+    <dt>sub <dd>If all forms of subscript notation are tolerated
+    <dt>type <dd>If types can be used inconsistently
+    <dt>undef <dd>If variables can be declared out of order
+    <dt>unparam <dd>If unused parameters should be tolerated
+    <dt>vars <dd>If multiple var statements per function should be allowed
+    <dt>white <dd>If sloppy whitespace is tolerated
+    <dt>widget <dd>If the yahoo widgets globals should be predefined
+    <dt>windows <dd>If ms windows-specific globals should be predefined
+<!-- // END-OPTIONS -->
+
     </dl>
 
     <p>
