Update to JSLint 2011-06-14.
type becomes confusion.

--- a/jslint4java-docs/src/main/resources/cli.html
+++ b/jslint4java-docs/src/main/resources/cli.html
@@ -20,6 +20,7 @@ Usage: jslint4java [options]
         --bitwise    If bitwise operators should be allowed
         --browser    If the standard browser globals should be predefined
         --cap        If upper case html should be allowed
+        --confusion  If types can be used inconsistently
         --continue   If the continuation statement should be tolerated
         --css        If css workarounds should be tolerated
         --debug      If debugger statements should be allowed
@@ -50,7 +51,6 @@ Usage: jslint4java [options]
         --safe       If use of some browser features should be restricted
         --sloppy     If the 'use strict'; pragma is optional
         --sub        If all forms of subscript notation are tolerated
-        --type       If types can be used inconsistently
         --undef      If variables can be declared out of order
         --unparam    If unused parameters should be tolerated
         --vars       If multiple var statements per function should be allowed
