--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -63,6 +63,7 @@
     <dt>bitwise <dd>If bitwise operators should be allowed
     <dt>browser <dd>If the standard browser globals should be predefined
     <dt>cap <dd>If upper case html should be allowed
+    <dt>confusion <dd>If types can be used inconsistently
     <dt>continue <dd>If the continuation statement should be tolerated
     <dt>css <dd>If css workarounds should be tolerated
     <dt>debug <dd>If debugger statements should be allowed
@@ -87,7 +88,6 @@
     <dt>safe <dd>If use of some browser features should be restricted
     <dt>sloppy <dd>If the 'use strict'; pragma is optional
     <dt>sub <dd>If all forms of subscript notation are tolerated
-    <dt>type <dd>If types can be used inconsistently
     <dt>undef <dd>If variables can be declared out of order
     <dt>unparam <dd>If unused parameters should be tolerated
     <dt>vars <dd>If multiple var statements per function should be allowed
