Allow choosing an alternate jslint.js for maven.
Given the rate at which JSLint changes, this may be handy.

--- a/jslint4java-docs/src/main/resources/maven.html
+++ b/jslint4java-docs/src/main/resources/maven.html
@@ -126,6 +126,12 @@ $ mvn jslint4java:lint
       </tr>
 
       <tr>
+        <td><code>&lt;jslintSource&gt;</code></td>
+        <td>An alternative <code>jslint.js</code> to use, in case the builtin version is insufficient.</td>
+        <td>The builtin version.</td>
+      </tr>
+
+      <tr>
         <td><code>&lt;options&gt;</code></td>
         <td>
           Which options to pass to JSLint.  Each option must be specified as
