Update to JSLint 2011-06-22.
This brings a new option, `properties`.

--- a/jslint4java-docs/src/main/resources/ant.html
+++ b/jslint4java-docs/src/main/resources/ant.html
@@ -83,6 +83,7 @@
     <dt>passfail <dd>If the scan should stop on first error
     <dt>plusplus <dd>If increment/decrement should be allowed
     <dt>predef <dd>The names of predefined global variables
+    <dt>properties <dd>If all property names must be declared with /*properties*/
     <dt>regexp <dd>If the . should be allowed in regexp literals
     <dt>rhino <dd>If the rhino environment globals should be predefined
     <dt>safe <dd>If use of some browser features should be restricted
